--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -9,6 +9,7 @@ java {
 }
 compileJava.options.encoding = 'UTF-8'
 dependencies {
+    implementation project(':common')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
