--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'java-library'
 }
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
 
 dependencies {
     api group: 'com.google.guava', name: 'guava', version: '30.1-jre'
@@ -10,3 +15,5 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
