基本流程已通，树形展示也正常，不过搜索class太慢了，需要考虑优化方案

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -17,6 +17,11 @@ shadowJar {
     archiveBaseName.set('agent')
     archiveClassifier.set('')
     archiveVersion.set('')
+
+    //resolve agent class conflict
+    relocate 'io.netty', 'com.github.kongwu.recorder.io.netty'
+    relocate 'org.apache.commons.lang3', 'com.github.kongwu.recorder.org.apache.commons.lang3'
+    relocate 'com.fasterxml.jackson', 'com.github.kongwu.recorder.com.fasterxml.jackson'
 }
 dependencies {
     implementation project(':common')
