动态代理后的类无法增强，待解决

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -21,7 +21,7 @@ shadowJar {
     //resolve agent class conflict
     relocate 'io.netty', 'com.github.kongwu.recorder.io.netty'
     relocate 'org.apache.commons.lang3', 'com.github.kongwu.recorder.org.apache.commons.lang3'
-    relocate 'com.fasterxml.jackson', 'com.github.kongwu.recorder.com.fasterxml.jackson'
+    relocate 'com.alibaba', 'com.github.kongwu.recorder.com.alibaba'
 }
 dependencies {
     implementation project(':common')
