--- a/common/build.gradle
+++ b/common/build.gradle
@@ -10,7 +10,7 @@ java {
 dependencies {
     api group: 'com.google.guava', name: 'guava', version: '30.1-jre'
     api group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
+    api group: 'com.alibaba', name: 'fastjson', version: '1.2.75'
     api group: 'io.netty', name: 'netty-all', version: '4.1.58.Final'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
